--- a/app/Resources/views/alle_verwijderde_artikelen_inkoper.html.twig
+++ b/app/Resources/views/alle_verwijderde_artikelen_inkoper.html.twig
@@ -10,7 +10,7 @@
 <body>
 
 <div class="container">
-  <h2>Verwijderde artikelen</h2>
+  <h2>Artikelen uit assortiment</h2>
   <div class="pull-left" style="width: 8%">
   <h4><button class="btn btn-primary"><span class="glyphicon glyphicon-home"></span><a href="{{ path('inkoperhome') }}"><font color="white"> Home</font></a><br/></h4>
   </div>
@@ -22,7 +22,7 @@
         <th>Omschrijving</th>
         <th>Technische specificaties</th>
         <th>Minimumvoorraad</th>
-        <th>Voorraad</th>
+        <th>Vrije voorraad</th>
         <th>Code vervangend artikel</th>
         <th>Bestelserie</th>
         <th>Inkoopprijs</th>
