--- a/app/Resources/views/ontvangstmelding.html.twig
+++ b/app/Resources/views/ontvangstmelding.html.twig
@@ -11,6 +11,9 @@
 
 <div class="container">
   <h2>Ontvangstmeldingen</h2>
+  <div class="pull-right" style="width:8%">
+    <span class="glyphicon glyphicon-chevron-left"></span><a href="{{ path('magazijnmeesterontvangstregistratie') }}"><font color="black"> Terug</font></a></br>
+  </div>
   <div class="pull-left" style="width: 8%">
   <h5><button class="btn btn btn-primary"><span class="glyphicon glyphicon-home"></span><a href="{{ path('magazijnmeesterhome') }}"><font color="white"> Home</font></a></button></h5>
   </div>
