--- a/app/Resources/views/alle_artikelen_verkoper.html.twig
+++ b/app/Resources/views/alle_artikelen_verkoper.html.twig
@@ -22,7 +22,7 @@
         <th>Omschrijving</th>
         <th>Technische specificaties</th>
         <th>Vrije voorraad</th>
-        <th>Gereserveerde voorraad</th>
+        <th>Gereserveerde artikelen</th>
         <th>Code vervangend artikel</th>
         <th>Artikel reserveren</th>
        </tr>
